# chat-project

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: database.instructions.md
app/: Dockerfile  config.py  main.py  models.py  schemas.py
app/auth/: utils.py
app/config/: settings.py
app/routes/: auth.py  friends.py  rooms.py
e2e/: e2e_test.go  go.mod  go.sum
frontend/: Dockerfile  index.html
frontend/src/: App.jsx  api.js  auth.jsx  index.css  jwtDecode.js  useWebSocket.js
gateway/: Dockerfile  gateway_test.go  go.mod  go.sum  main.go
gateway/auth/: jwt.go
gateway/grpc/: server.go
gateway/id/: snowflake.go
gateway/kafka/: producer.go
gateway/presence/: refresher.go
gateway/ratelimit/: limiter.go
gateway/ws/: client.go  handler.go  hub.go  messages.go
k8s/: kind-config.yaml  values-cloud.yaml
k8s/chart/: Chart.yaml  values.yaml
message-worker/: Dockerfile  go.mod  go.sum  main.go  message_worker_test.go
message-worker/consumer/: consumer.go
message-worker/store/: cassandra.go  postgres.go  redis.go
proto/: delivery.pb.go  delivery.proto  delivery_grpc.pb.go  go.mod
router/: Dockerfile  go.mod  go.sum  main.go  router_test.go
router/delivery/: batcher.go  consumer.go  gateway_pool.go
router/presence/: consumer.go  registry.go
router/store/: postgres.go
schema/cassandra/: init.cql
schema/clickhouse/: README.md  docker-init.sh  init.sql  low-memory.xml
tests/: conftest.py  test_api.py  test_cache.py  test_cassandra.py  test_postgres.py
worker/: go.mod
(+29 files in other folders)
