[project]
name = "chat-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30",
    "bcrypt>=4.0",
    "cassandra-driver>=3.29",
    "email-validator>=2.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "python-jose[cryptography]>=3.3",
    "redis[hiredis]>=5.0",
    "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
include = ["app*"]
